[package]
name = "location_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
polars = { version = "0.46.0", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"] }
serde = "1.0.219"
serde_json = "1.0.140"
